<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTint="@android:color/transparent"
    app:cardElevation="6dp"
    app:cardCornerRadius="0dp"
    app:cardUseCompatPadding="true"
    app:cardPreventCornerOverlap="false">

    <LinearLayout
        android:orientation="vertical"
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_card_marco">
        <TextView
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:id="@+id/txtTituloCasa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_casa"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPagerImagenes"
                android:clipToPadding="false"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:background="#121212"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:textSize="14sp"
                android:textColor="#ffffff"
                android:id="@+id/txtContadorImagen"
                android:background="#66000000"
                android:padding="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="1 / 1"
                app:layout_constraintEnd_toEndOf="@+id/viewPagerImagenes"
                app:layout_constraintTop_toTopOf="@+id/viewPagerImagenes"/>
            <ImageButton
                android:id="@+id/btnIzquierda"
                android:background="@android:color/transparent"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/izq"
                android:contentDescription="@string/anterior"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/viewPagerImagenes"
                app:layout_constraintStart_toStartOf="@+id/viewPagerImagenes"
                app:layout_constraintTop_toTopOf="@+id/viewPagerImagenes"/>
            <ImageButton
                android:id="@+id/btnDerecha"
                android:background="@android:color/transparent"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/der"
                android:contentDescription="@string/siguiente"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/viewPagerImagenes"
                app:layout_constraintEnd_toEndOf="@+id/viewPagerImagenes"
                app:layout_constraintTop_toTopOf="@+id/viewPagerImagenes"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:textColor="@android:color/holo_red_dark"
            android:id="@+id/txtSinMultimedia"
            android:padding="4dp"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sin_multimedia"/>
        <TextView
            android:textSize="14sp"
            android:textColor="#ffffff"
            android:id="@+id/txtDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/detalle"/>
        <TextView
            android:textSize="16sp"
            android:textColor="#e1a3f9"
            android:id="@+id/txtDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/inmueble"/>
        <TextView
            android:textSize="22sp"
            android:textColor="#ffffff"
            android:id="@+id/txtPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="€"/>
        <TextView
            android:id="@+id/txtLatitud"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/txtLongitud"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:gravity="end"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <ImageButton
                android:id="@+id/btnUbicacion"
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mapa"
                android:contentDescription="@string/ubicacion"/>
            <ImageButton
                android:id="@+id/btnImagenes"
                android:background="@android:color/transparent"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/foto"
                android:contentDescription="@string/imagenes"
                android:layout_marginStart="8dp"/>
            <ImageButton
                android:id="@+id/btnVideos"
                android:background="@android:color/transparent"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/video"
                android:contentDescription="@string/videos"
                android:layout_marginStart="8dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
