<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?android:attr/windowBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="end|center_vertical"
        android:orientation="horizontal"
        android:id="@+id/layoutMultimedia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:baselineAligned="false"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageButton
            android:id="@+id/btnOrdenar"
            android:src="@drawable/orden"
            android:contentDescription="@string/ordenar"
            style="@style/BotonIcono"/>
        <ImageButton
            android:id="@+id/btnBuscar"
            android:src="@android:drawable/ic_menu_search"
            android:contentDescription="@string/buscar"
            android:layout_marginStart="4dp"
            style="@style/BotonIcono"/>
        <EditText
            android:textColor="@color/colorTextoNaranja"
            android:textColorHint="@color/colorTextoNaranja"
            android:id="@+id/etBuscar"
            android:background="@color/colorFondoNegro"
            android:padding="6dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/buscar"
            android:layout_weight="1"
            android:inputType="text"/>
        <ImageButton
            android:id="@+id/btnFiltrar"
            android:src="@drawable/filtrar"
            android:contentDescription="@string/filtrar"
            android:layout_marginStart="8dp"
            style="@style/BotonIcono"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:background="@color/colorFondoNegro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/layoutContact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutMultimedia"/>
    <TextView
        android:textSize="16sp"
        android:textColor="@color/colorTextoNaranja"
        android:id="@+id/txtSinResultados"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SIN RESULTADOS"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ProgressBar
        android:id="@+id/progressBarCarga"
        android:visibility="gone"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="?android:attr/progressBarStyleLarge"/>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/layoutContact"
        android:background="@color/colorFondoNegro"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/bHome"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/home"
                android:contentDescription="@string/home"/>
            <TextView
                android:text="@string/home"
                style="@style/TextoBarraInferior"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/bCall"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/call"
                android:contentDescription="@string/llamar"/>
            <TextView
                android:text="@string/llamar"
                style="@style/TextoBarraInferior"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/bContact"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/mail"
                android:contentDescription="@string/contactar"/>
            <TextView
                android:text="@string/contactar"
                style="@style/TextoBarraInferior"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/bChat"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/chat"
                android:contentDescription="@string/chatbot"/>
            <TextView
                android:text="@string/chatbot"
                style="@style/TextoBarraInferior"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
